# Offers_sdk_py

./: .env.example  LICENSE  README.txt  examples.py  main.py  offers_api_client.py  pyproject.toml  requirements.txt  server.py
Core/Api_services/Requests/: register_product_req.py
Core/Api_services/Responces/: product_offers_response.py
Http_client/: http_client.py
Http_client/Implementations/: aiohttp_client.py  httpx_client.py  requests_client.py
Offers_sdk/: offers_api_client.py
Offers_sdk/Core/Api_services/Requests/: register_product_req.py  register_product_request.py
Offers_sdk/Core/Errors/: http_errors.py
Offers_sdk/Http_client/: http_client.py
Offers_sdk/Http_client/Implementations/: aiohttp_client.py  httpx_client.py  requests_client.py
Offers_sdk/Services/: base_services_client.py  services_config.py
Offers_sdk/Services/Products/: auth_service.py  product_service.py
Services/: base_services_client.py
Services/Products/: auth_service.py  product_service.py
Tests/: fake_server.py
Tests/Api/: test_offers_api_client.py
Tests/Services/: register_product_tests.py
Tests/Services/Integration_tests/: Product_service_tests.py  auth_service_tests.py  get_product_offers_test.py  register_product_test.py
Tests/Services/Unit_tests/: register_product_tests.py  test_auth_service.py  test_get_product_offers.py
Validation/: schemas.py
src/Offers_sdk/: offers_api_client.py
src/Offers_sdk/Core/Errors/: http_errors.py
src/Offers_sdk/Http_client/: http_client.py
src/Offers_sdk/Services/: base_services_client.py  services_config.py
(+25 files in other folders)
